= Runt Changelog

== Version 0.6.0

* Fixed bug #5749: Fixed spans midnight for REDay (Revision 156), changed semantics when dealing with lower precision arguments

* Fixed bug #10640: incorrect tutorial section for tutorial_te.rdoc

* Fixed bug #10605: DateRange.empty? should be true for min == max

== Version 0.5.0

* Refactored Schedule implementation which greatly simplifies customization but does potentially break existing clients who relied on the ability to call add mulitple times (SEE BELOW)

* Added update method to Schedule allowing clients to update existing expressions

* Added select method to Schedule allowing clients to query Events using arbitrary criteria   

* Added events method to Schedule which returns an Array of the currrently held Events   

* Added time-related shortcuts to Runt module contributed by Ara T. Howard

* Added ability to work with Time class contributed by Paul Wright

* Implemented meaningful to_s methods for TExpr classes

* Added include? method to Standard Library Date class allowing Spec class better interaction with other expressions

* Applied patch to fix PDate serialization bug contributed by Jodi Showers

* Added BeforeTE, AfterTE, enhanced TExpr#dates method, RFC2445 (iCalendar) compliance unit test, contributed by Larry Karnowski

* Applied patch by Gordon Thiesfeld which fixes broken Time class compatibility

* Applied patch by Gordon Thiesfeld which allows REWeek expressions to span across two weeks

* Removed unused context.rb and contexttest.rb

* Removed unnecessary test suite alltests.rb

== Version 0.4.0

* Added DayIntervalTE contributed by Ira Burton which matches every n days past a given date

* Added YearTE requested by Pat Maddox

== Version 0.3.0

* TExpr (finally!) becomes a Module instead of a superclass 

* Added overlap? method for all temporal expressions and DateRange

* Added REMonth expression which matches a range of dates each month
 